完成 所有需求及测试

--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
   "homepage": "https://school.thoughtworks.cn",
   "devDependencies": {
     "jasmine": "^2.6.0",
-    "sinon": "^2.3.5"
+    "sinon": "^2.3.5",
+    "jasmine-node": "^1.14.5"
+  },
+  "dependencies": {
+    "readline-sync": "^1.4.9"
   }
 }
